--- a/FiloArtsPlus/templates/gallery.html
+++ b/FiloArtsPlus/templates/gallery.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/logo.jpg' %}" rel="icon">
+  <link href="{% static 'assets/img/logo.png' %}" rel="icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -36,8 +36,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="/" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-         <img src="{% static 'assets/img/logo.jpg' %}" alt="">
+         <img src="{% static 'assets/img/logo.png' %}" alt="">
         <h1 class="sitename">FiloArts+</h1>
       </a>
 
@@ -61,6 +60,8 @@
 {#  Start of Gallery page#}
 
    <main class="main">
+
+
 
 
        <!-- Gallery Section -->
