--- a/FiloArtsPlus/static/assets/css/main.css
+++ b/FiloArtsPlus/static/assets/css/main.css
@@ -799,6 +799,11 @@ section,
 
 }
 
+.clients_table .table {
+  background-color: #FFB800;
+  color: white;
+}
+
 .hero .info {
   position: relative;
   inset: 0;
@@ -2662,7 +2667,7 @@ section,
   font-size: 14px;
 }
 
-.contact .php-email-form {
+.contact .client-form {
   background-color: var(--surface-color);
   height: 100%;
   padding: 30px;
@@ -2670,14 +2675,14 @@ section,
 }
 
 @media (max-width: 575px) {
-  .contact .php-email-form {
+  .contact .client-form {
     padding: 20px;
   }
 }
 
-.contact .php-email-form input[type=text],
-.contact .php-email-form input[type=email],
-.contact .php-email-form textarea {
+.contact .client-form input[type=text],
+.contact .client-form input[type=email],
+.contact .client-form textarea {
   font-size: 14px;
   padding: 10px 15px;
   box-shadow: none;
@@ -2687,19 +2692,19 @@ section,
   border-color: color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
-.contact .php-email-form input[type=text]:focus,
-.contact .php-email-form input[type=email]:focus,
-.contact .php-email-form textarea:focus {
+.contact .client-form input[type=text]:focus,
+.contact .client-form input[type=email]:focus,
+.contact .client-form textarea:focus {
   border-color: var(--accent-color);
 }
 
-.contact .php-email-form input[type=text]::placeholder,
-.contact .php-email-form input[type=email]::placeholder,
-.contact .php-email-form textarea::placeholder {
+.contact .client-form input[type=text]::placeholder,
+.contact .client-form input[type=email]::placeholder,
+.contact .client-form textarea::placeholder {
   color: color-mix(in srgb, var(--default-color), transparent 70%);
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .client-form button[type=submit] {
   color: var(--contrast-color);
   background: var(--accent-color);
   border: 0;
@@ -2708,9 +2713,22 @@ section,
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .client-form button[type=submit]:hover {
+
+
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
 }
+
+/*.contact .submit_btn {*/
+
+/*  color: var(--contrast-color);*/
+/*  background: var(--accent-color);*/
+/*  border: 0;*/
+/*  padding: 10px 30px;*/
+/*  transition: 0.4s;*/
+/*  border-radius: 4px;*/
+
+/*}*/
 
 /*--------------------------------------------------------------
 # Starter Section Section
