--- a/FiloArtsPlus/templates/gallery.html
+++ b/FiloArtsPlus/templates/gallery.html
@@ -27,6 +27,7 @@
 
   <!-- Main CSS File -->
   <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'assets/css/gallery.css' %}">
 </head>
 
 
@@ -74,139 +75,40 @@
         <p>Crafting Art that lasts a lifetime</p>
       </div><!-- End Section Title -->
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects section">
 
-      <div class="container">
+        <div class="container m-3 d-flex justify-content-center align-items-center" style="min-height: 100vh;" >
 
-        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+            <div class="row justify-content-center g-4">
 
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-remodeling">Drawings</li>
-            <li data-filter=".filter-construction">Paintings</li>
-{#            <li data-filter=".filter-repairs">Repairs</li>#}
-{#            <li data-filter=".filter-design">Design</li>#}
-          </ul><!-- End Portfolio Filters -->
+                {% for drawing in drawings %}
 
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-3 card m-5">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-remodeling">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Drawing 1</h4>
-                  <p>FiloArts+ Drawings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    <img src="/media/{{ drawing.drawing_img }} " class="card-img-top  img-fluid card-img-top p-0 m-0 rounded" style="cursor: pointer;" width="300"  alt="">  <br><br>
+
+                     <div class="card-body">
+                <p><b>Name:</b> {{ drawing.drawing_name }}</p>
+                <p><b>Artist:</b> {{ drawing.drawing_artist }}</p>
+                <p><b>Price:</b> Ksh.{{ drawing.drawing_price }}</p>
+
+                     </div>
+
+
+
                 </div>
-              </div>
-            </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-construction">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Drawing</h4>
-                  <p>FiloArts+ Drawings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+                      {% if forloop.counter|divisibleby:3 %}
+                <div class="w-100"></div>
+            {% endif %}
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-repairs">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Drawing</h4>
-                  <p>FiloArts+ Drawings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-design">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Painting 1</h4>
-                  <p>FiloArts+ Paintings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-remodeling">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Painting 2</h4>
-                  <p>FiloArts+ Paintings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-construction">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Drawing 1</h4>
-                  <p>FiloArts+ Drawings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-repairs">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Drawing 2</h4>
-                  <p>FiloArts+ Drawings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-design">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Painting 3</h4>
-                  <p>FiloArts+ Paintings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-remodeling">
-              <div class="portfolio-content h-100">
-                <img src="{% static 'assets/img/projects/Drawing4.jpg' %}" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Drawing 3</h4>
-                  <p>FiloArts+ Drawings</p>
-                  <a href="{% static 'assets/img/projects/Drawing4.jpg' %}" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+                {% endfor %}
 
 
+            </div>
 
-          </div><!-- End Portfolio Container -->
+</div>
 
-        </div>
 
-      </div>
-    </section>
 
     </section><!-- /Projects Section -->
 
