--- a/FiloArtsPlus/templates/clients.html
+++ b/FiloArtsPlus/templates/clients.html
@@ -104,7 +104,7 @@
       <p>© <span>Copyright</span> <strong class="px-1 sitename">FiloArts+</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
 
-        Designed by <a href="https://stephen-otieno.github.io/MyWebpage1/" class="credits1"><b>StemiotSoftwares</b></a>
+        Designed by <a href="https://stephen-otieno.github.io/MyWebpage1/" style="color: red" class="credits1"><b>StemiotSoftwares</b></a>
       </div>
     </div>
 
