--- a/FiloArtsPlus/templates/index.html
+++ b/FiloArtsPlus/templates/index.html
@@ -437,7 +437,7 @@
       <p>© <span>Copyright</span> <strong class="px-1 sitename">FiloArts+</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
 
-        Designed by <a href="https://stemiotsoftwares.onrender.com/" class="credits1"><b>StemiotSoftwares</b></a>
+        Designed by <a href="https://stemiotsoftwares.onrender.com/" style="color: red" class="credits1"><b>StemiotSoftwares</b></a>
       </div>
     </div>
 
