--- a/FiloArtsPlus/templates/login.html
+++ b/FiloArtsPlus/templates/login.html
@@ -12,6 +12,8 @@
     <title>Login</title>
     <link rel="stylesheet" href="{% static 'assets/css/login.css' %}">
 
+        <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
@@ -50,7 +52,7 @@
 
 
                     <a href="{% url 'homepage' %}"> <button type="button" class="submit_btn"> Back</button> </a>
-                    <button type="submit" class="submit_btn">Submit</button>
+                    <button type="submit" class="submit_btn"><b>Submit</b></button>
 
 
                 </div>
