login,signup & admin tab

--- a/FiloArtsPlus/templates/blogs.html
+++ b/FiloArtsPlus/templates/blogs.html
@@ -35,7 +35,7 @@
 
       <a href="/" class="logo d-flex align-items-center">
          <img src="{% static 'assets/img/logo.png' %}" alt="">
-        <h1 class="sitename">FiloArts+</h1>
+        <h1 style="color: #3d0224" class="sitename">FiloArts+</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -82,10 +82,10 @@
  <footer>
 
  <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">FiloArts+</strong> <span>All Rights Reserved</span></p>
+{#      <p>© <span>Copyright</span> <strong class="px-1 sitename">FiloArts+</strong> <span>All Rights Reserved</span></p>#}
       <div class="credits">
 
-        Designed by <a href="https://stemiotsoftwares.onrender.com/" style="color: red" class="credits1"><b>StemiotSoftwares</b></a>
+        Designed by <a href="https://stemiotsoftwares.onrender.com/" style="color: black" class="credits1"><b>StemiotInnovations</b></a>
       </div>
     </div>
 
