--- a/FiloArtsPlus/static/assets/css/main.css
+++ b/FiloArtsPlus/static/assets/css/main.css
@@ -157,7 +157,7 @@ h6 {
   color: var(--heading-color);
 }
 .header .logo .sitename {
-  color: #FFC720FF;
+  color: #3d0224;
 }
 
 
@@ -959,10 +959,11 @@ section,
 
 .get-started .content h3 {
   font-size: 36px;
-  font-weight: 600;
+  font-weight: 400;
   margin-bottom: 25px;
   padding-bottom: 25px;
   position: relative;
+  word-spacing: 25px;
 }
 
 .get-started .content h3:after {
@@ -1087,7 +1088,7 @@ section,
 --------------------------------------------------------------*/
 .services .service-item {
   background-color: var(--surface-color);
-  padding: 40px;
+  padding: 50px;
   box-shadow: 0px 0 30px rgba(0, 0, 0, 0.1);
   height: 100%;
 }
@@ -1133,9 +1134,10 @@ section,
 }
 
 .services .service-item p {
-  line-height: 24px;
-  font-size: 14px;
+  line-height: 30px;
+  font-size:30px;
   margin-bottom: 0;
+
 }
 
 .services .service-item .readmore {
@@ -1649,7 +1651,7 @@ section,
 --------------------------------------------------------------*/
 .about .inner-title {
   font-size: 2.75rem;
-  font-weight: 700;
+  font-weight: 500;
   margin: 30px 0;
 }
 
