--- a/FiloArtsPlus/templates/login.html
+++ b/FiloArtsPlus/templates/login.html
@@ -9,7 +9,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="{% static 'assets/img/logo.png' %}" rel="icon">
-    <title>Login</title>
+    <title>FiloArts-Login</title>
     <link rel="stylesheet" href="{% static 'assets/css/login.css' %}">
 
         <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <div class=" login_btn col-md-12 text-center">
 
 
-                    <a href="{% url 'signup' %}"> <button type="button" class="submit_btn"> Back</button> </a>
+                    <a href="{% url 'homepage' %}"> <button type="button" class="submit_btn"> Back</button> </a>
                     <button type="submit" class="submit_btn"><b>Submit</b></button>
 
 
