--- a/FiloArtsPlus/templates/signup.html
+++ b/FiloArtsPlus/templates/signup.html
@@ -20,7 +20,7 @@
     <nav class="signup">
     <form action="{% url 'signup' %}" method="POST" class=" signup_form">
 
-         <h3> <b>Sign up</b></h3> <br>
+         <h3> <b>FiloArts-Sign up</b></h3> <br>
         <b>  {% csrf_token %} </b>
 
 
