--- a/FiloArtsPlus/templates/index.html
+++ b/FiloArtsPlus/templates/index.html
@@ -202,10 +202,37 @@
       <br> <br>
     </section>
 
+
+{#      call to action#}
+
+{#       <!-- Call To Action Section -->#}
+{#    <section id="call-to-action" class="call-to-action section light-background">#}
+{##}
+{#      <div class="container">#}
+{#        <img src="{% static 'assets/img/qualiscent.jpg' %}" alt="">#}
+{#        <div class="content row justify-content-center" data-aos="zoom-in" data-aos-delay="100">#}
+{#          <div class="col-xl-10">#}
+{#            <div class="text-center">#}
+{#              <h3>Call To Action</h3>#}
+{#              <p>United in Rights is always a phone call away. By the help of the modern technology we have the ability to reach any victim and respond to any cases as soon as we get the information.#}
+{#              We are available across all the social media platforms and our hotline number is also available. <br> Just press the button!</p>#}
+{#              <a class="cta-btn" href="{% url '' %}">Call To Action</a>#}
+{#            </div>#}
+{#          </div>#}
+{#        </div>#}
+{#      </div>#}
+{##}
+{#    </section><!-- /Call To Action Section -->#}
+{##}
+
+{#      call to action#}
+
+
 {#      Qualicent Section#}
       <hr>
 
-    <section id="qualicent"  class="light-background" >
+    <section id="qualicent"  class=" qualicent light-background" >
+
 
        <div  class="info d-flex align-items-center">
         <div class="container">
@@ -214,11 +241,12 @@
 
         <h2>Qualicent</h2>
     <h4>Crafting Art that lasts a lifetime.</h4>
+{#    <img src="{% static 'assets/img/qualiscent.jpg' %}" alt="">#}
 
       </div><!-- End Section Title -->
             </div>
 
-              <div class="container">
+
                    <p> <h4>In Qualicent, we produce high-quality, diverse and sustainable art. Our creations span drawings and Paintings,
                   scriptures and crafts showcasing excellence and creativity. <br>
                   Explore our art:
@@ -460,6 +488,4 @@
   <!-- Main JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
 
-</body>
-
-</html>
+</
