--- a/FiloArtsPlus/static/assets/css/main.css
+++ b/FiloArtsPlus/static/assets/css/main.css
@@ -455,8 +455,7 @@ h6 {
 .footer {
   /*color: var(--default-color);*/
     color: black;
-  /* background-color: var(--accent-color);*/
-  /*background: url("../img/footer-bg.jpg") top center no-repeat;*/
+
   background-size: cover;
   font-size: 14px;
   background-color: #ffc720;
@@ -588,6 +587,8 @@ h6 {
   font-size: 13px;
     
 }
+
+
 
 
 /*--------------------------------------------------------------
@@ -1750,6 +1751,10 @@ section,
   z-index: 1;
 }
 
+
+
+
+
 /*--------------------------------------------------------------
 # Stats Counter Section
 --------------------------------------------------------------*/
@@ -2731,6 +2736,9 @@ section,
 --------------------------------------------------------------*/
 .starter-section {
   /* Add your styles here */
+
+}
+.qualicent {
 }
 
 /*--------------------------------------------------------------
