--- a/FiloArtsPlus/templates/blogs.html
+++ b/FiloArtsPlus/templates/blogs.html
@@ -42,9 +42,9 @@
         <ul>
           <li><a href="/" class="active">Home</a></li>
           <li><a href="{% url 'homepage' %}#about">About</a></li>
-          <li><a href="{% url 'homepage' %}#kidloom">Kidloom</a></li>
-          <li><a href="{% url 'homepage' %}#qualicent">Qualicent</a></li>
-          <li><a href="{% url 'homepage' %}#taskhive">TaskHive</a></li>
+          <li><a href="{% url 'homepage' %}#filokid">FiloKid</a></li>
+          <li><a href="{% url 'homepage' %}#filocraft">FiloCraft</a></li>
+          <li><a href="{% url 'homepage' %}#filosolve">FiloSolve</a></li>
           <li><a href="{% url 'gallery' %}">Gallery</a></li>
           <li><a href="{% url 'blogs' %}">Blogs</a></li>
           <li><a href="{% url 'homepage' %}#contact">Contact Us</a></li>
