--- a/FiloArtsPlus/templates/gallery.html
+++ b/FiloArtsPlus/templates/gallery.html
@@ -45,9 +45,9 @@
         <ul>
           <li><a href="/" class="active">Home</a></li>
           <li><a href="{% url 'homepage' %}#about">About</a></li>
-          <li><a href="{% url 'homepage' %}#kidloom">Kidloom</a></li>
-          <li><a href="{% url 'homepage' %}#qualicent">Qualicent</a></li>
-          <li><a href="{% url 'homepage' %}#taskhive">TaskHive</a></li>
+          <li><a href="{% url 'homepage' %}#filokid">FiloKid</a></li>
+          <li><a href="{% url 'homepage' %}#filocraft">FiloCraft</a></li>
+          <li><a href="{% url 'homepage' %}#filosolve">FiloSolve</a></li>
           <li><a href="{% url 'gallery' %}">Gallery</a></li>
           <li><a href="{% url 'blogs' %}">Blogs</a></li>
           <li><a href="{% url 'homepage' %}#contact">Contact Us</a></li>
@@ -150,9 +150,9 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4> Key components </h4>
           <ul>
-            <li><a href="/kidloom">Kidloom</a></li>
-            <li><a href="/qualicent">Qualicent</a></li>
-            <li><a href="/taskhive">TaskHive</a></li>
+            <li><a href="{% url 'homepage' %}#filokid">FiloKid</a></li>
+            <li><a href="{% url 'homepage' %}#filocraft">FiloCraft</a></li>
+            <li><a href="{% url 'homepage' %}#filosolve">FiloSolve</a></li>
 
           </ul>
         </div>
