--- a/FiloArtsPlus/templates/index.html
+++ b/FiloArtsPlus/templates/index.html
@@ -46,9 +46,9 @@
         <ul>
           <li><a href="/" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#kidloom">Kidloom</a></li>
-          <li><a href="#qualicent">Qualicent</a></li>
-          <li><a href="#taskhive">TaskHive</a></li>
+          <li><a href="#kidloom">FiloKid</a></li>
+          <li><a href="#filocraft">FiloCraft</a></li>
+          <li><a href="#filosolve">FiloSolve</a></li>
           <li><a href="{% url 'gallery' %}">Gallery</a></li>
           <li><a href="{% url 'blogs' %}">Blogs</a></li>
           <li><a href="#contact">Contact Us</a></li>
@@ -74,7 +74,7 @@
                 <h3>Welcome to FiloArts+.</h3>
             </div>
               <div class="container">
-              <p><h4>We are a creativity and innovation company that inspires,educates and solves through three powerful pillars: Kidloom, Qualicent and TaskHive. Our Mission is to craft a brighter
+              <p><h4>We are a creativity and innovation company that inspires,educates and solves through three powerful pillars: FiloKid, FIloCraft and FiloSolve. Our Mission is to craft a brighter
                   more creative future by empowering young minds, producing world-class art and solving real world challenges.</h4></p>
 
                   </div>
@@ -102,8 +102,8 @@
       <div class="container col-lg-13 text-center" >
 
             <p>
-             <h3>FiloArts+ is dedicated to transforming creativity into action. Through Kidloom, we nurture young innovators. In Qualicent,
-                we craft diverse, sustainable art products. With TaskHive, we execute impactful projects to solve today's and tomorrow's challenges.
+             <h3>FiloArts+ is dedicated to transforming creativity into action. Through FiloKid, we nurture young innovators. In FiloCraft,
+                we craft diverse, sustainable art products. With FiloSolve, we execute impactful projects to solve today's and tomorrow's challenges.
 
       </h3>
           </p>
@@ -173,14 +173,14 @@
 
     </section><!-- /Mission Section -->
 
-<section id="kidloom" >
+<section id="filokid" >
        <div class="info d-flex align-items-center">
         <div class="container">
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
 <div class="container section-title" data-aos="fade-up">
 
 
-        <h2>Kidloom</h2>
+        <h2>FiloKid</h2>
 
       </div><!-- End Section Title -->
 
@@ -188,13 +188,13 @@
             </div>
             <div class="col-lg-13 text-center ">
               <div class="container">
-              <p><h4>Inspiring the next generation of innovators. <br> Kidloom complements the school system by turning theory into practice.
+              <p><h4>Inspiring the next generation of innovators. <br> FiloKid complements the school system by turning theory into practice.
                   Through creative and innovation programs, we empower children to think critically, act creatively and make a difference.</h4></p>
 
                   </div>
                 <br>
               <div class="col-lg-13 text-center">
-              <a href="/kidloom" class="btn-get-started align-items-center">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="/filokid" class="btn-get-started align-items-center">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -205,33 +205,13 @@
 
 {#      call to action#}
 
-{#       <!-- Call To Action Section -->#}
-{#    <section id="call-to-action" class="call-to-action section light-background">#}
-{##}
-{#      <div class="container">#}
-{#        <img src="{% static 'assets/img/qualiscent.jpg' %}" alt="">#}
-{#        <div class="content row justify-content-center" data-aos="zoom-in" data-aos-delay="100">#}
-{#          <div class="col-xl-10">#}
-{#            <div class="text-center">#}
-{#              <h3>Call To Action</h3>#}
-{#              <p>United in Rights is always a phone call away. By the help of the modern technology we have the ability to reach any victim and respond to any cases as soon as we get the information.#}
-{#              We are available across all the social media platforms and our hotline number is also available. <br> Just press the button!</p>#}
-{#              <a class="cta-btn" href="{% url '' %}">Call To Action</a>#}
-{#            </div>#}
-{#          </div>#}
-{#        </div>#}
-{#      </div>#}
-{##}
-{#    </section><!-- /Call To Action Section -->#}
-{##}
-
-{#      call to action#}
 
 
-{#      Qualicent Section#}
+
+{#      FiloCraft Section#}
       <hr>
 
-    <section id="qualicent"  class=" qualicent light-background" >
+    <section id="filocraft"  class=" light-background" >
 
 
        <div  class="info d-flex align-items-center">
@@ -239,15 +219,14 @@
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
 <div class="container section-title" data-aos="fade-up">
 
-        <h2>Qualicent</h2>
+        <h2>FiloCraft</h2>
     <h4>Crafting Art that lasts a lifetime.</h4>
-{#    <img src="{% static 'assets/img/qualiscent.jpg' %}" alt="">#}
 
       </div><!-- End Section Title -->
             </div>
 
 
-                   <p> <h4>In Qualicent, we produce high-quality, diverse and sustainable art. Our creations span drawings and Paintings,
+                   <p> <h4>In FiloCraft, we produce high-quality, diverse and sustainable art. Our creations span drawings and Paintings,
                   scriptures and crafts showcasing excellence and creativity. <br>
                   Explore our art:
 
@@ -263,10 +242,9 @@
                   </div>
                 <br>
               <div class="col-lg-13 text-center">
-              <a href="/qualicent" class="btn-get-started align-items-center">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="/filocraft" class="btn-get-started align-items-center">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
-        </div>
 
         </section>
             <hr>
@@ -278,29 +256,29 @@
 
 
 
-    <section id="taskhive" >
+    <section id="filosolve" >
 
        <div  class="info d-flex align-items-center">
         <div class="container">
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
 <div class="container section-title" data-aos="fade-up">
 
-        <h2>TaskHive</h2>
+        <h2>FiloSolve</h2>
     <h4>Where ideas solve real world challenges.</h4>
 
       </div><!-- End Section Title -->
             </div>
 
               <div class="container">
-                   <p> <h4>TaskHive is our project execution hub. We tackle social, physical and emotional challenges through innovative solutions.
-                  Kids from kidloom and our wider network of creatives join forces to make an impact.<br>
+                   <p> <h4>FiloSolve is our project execution hub. We tackle social, physical and emotional challenges through innovative solutions.
+                  Kids from FiloKid and our wider network of creatives join forces to make an impact.<br>
 
                   </h4>
 
                   </div>
                 <br>
               <div class="col-lg-13 text-center">
-              <a href="/taskhive" class="btn-get-started align-items-center">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="/filosolve" class="btn-get-started align-items-center">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -446,9 +424,9 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4> Key components </h4>
           <ul>
-            <li><a href="/kidloom">Kidloom</a></li>
-            <li><a href="/qualicent">Qualicent</a></li>
-            <li><a href="/taskhive">TaskHive</a></li>
+            <li><a href="#filokid">FiloKid</a></li>
+            <li><a href="#filocraft">FiloCraft</a></li>
+            <li><a href="#filosolve">FiloSolve</a></li>
 
           </ul>
         </div>
